# neural_web

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  research.md
neural_web/: __init__.py  default.py  signals.py  types.py  utilities.py
neural_web/cells/: cell_distances.py  cell_errors.py  dendrite.py  neuron.py  nucleus.py  organelle.py  soma.py  spike_membrane.py
neural_web/nnets/: activation_functions.py  loss_functions.py  optimizers.py  position_embedding.py
